TD4 done but need cleaning

--- a/src/app/ldap-details/ldap-details.component.html
+++ b/src/app/ldap-details/ldap-details.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="goToLdap()">
     <mat-icon aria-label="Accueil">arrow_back</mat-icon>
   </button>
-  {{ addForm ? "Ajout d'un utilisateur" : "Edition d'un itilisateur" }}
+  {{ addForm ? "Ajout d'un utilisateur" : "Edition d'un utilisateur" }}
 </h3>
 <section class="loading" *ngIf="processLoadRunning == true">
   <mat-spinner diameter="25"></mat-spinner>
